test/Fail/Issue3582.err
Issue3582.agda:8.7-8: error: [UnequalSorts]
Prop₁ != Prop
when checking that the expression P has type Prop
